Update class name of Megaphone audio player to correct issue with Soundcloud players not working

--- a/assets/_sass/components/_audio-player.scss
+++ b/assets/_sass/components/_audio-player.scss
@@ -1,4 +1,5 @@
-.audio-player {
+.audio-player,
+.mega-audio-player {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
